--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  background-color: #61dafb;
+}
+.App Login{
+  text-align: center;
+  background-color: #61dafb;
 }
 
 .App-logo {
