--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@ padding-bottom: 100px;
   background-color: purple;
   color: #efefef;
   padding: 0.610rem;
-  border: 1px solid black;
+  border: 0;
   outline:rgba(black, 0.3);
   border-radius: 5em;
   justify-content: center; 
@@ -136,6 +136,7 @@ padding-bottom: 100px;
 .App img{
   position: relative;
   width: 300px;
+  height: auto;
   padding: 12px 20px;
   text-align: center;
 }
