--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ text-align: center;
 
 .App fieldset{
   background-color: #efefef;
-  margin: 0 700px 0 700px;
+  margin: 0 30% 0 30%;
   border: #282c34;
   padding: 50px 0 50px 0;
   box-shadow: #282c34;
@@ -104,7 +104,7 @@ text-align: center;
   position: relative;
   padding: 0px 0px 0px 0px;
   width: 50px;
-  float: left ;
+  float: left;
 }
 
 .App nav h1{
@@ -139,7 +139,7 @@ text-align: center;
 }
 .App img{
   position: relative;
-  width: 300px;
+  width: 100px;
   height: auto;
   padding: 12px 20px;
   text-align: center;
