fix: resolved problems with profile page     -> couldn't find the translation list,     -> fixed error with empty translations list     -> empty storage error from uneccesary code line     -> when clear the tranlation history the page refreshes     -> shows the last 10 translations
    style: added some style with css
    -> translations history shows the translations in list and not side by side
    ->added appearence at buttons when clicked

    docs : added some comments at the code

--- a/src/App.css
+++ b/src/App.css
@@ -127,15 +127,30 @@ text-align: center;
 
 
 
-.App nav a:hover{
+.App nav li:hover{
   color: #282c34;
 }
 
+.translation_btn:active {
+  transform: translateY(4px);
+}
 
-.App li{
+#btn-li:active {
+  transform: translateY(4px);
+}
+
+#btn-li{
   text-decoration: none;
   margin-bottom: 20px;
   list-style-type: none;
+  display: inline-block;
+}
+
+.App li{
+  text-decoration: none;
+  margin-bottom: 10px;
+  list-style-type: none;
+  display: list-item;
 }
 .App img{
   position: relative;
